<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_entrant_features"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_browse_events"
            android:title="@string/nav_item_browse" />
        <item
            android:id="@+id/navigation_my_events"
            android:title="@string/nav_item_my_events" />
        <item
            android:id="@+id/navigation_create_event"
            android:title="@string/nav_item_create_event" />
        <item
            android:id="@+id/navigation_manage_events"
            android:title="@string/nav_item_manage_events" />
        <item
            android:id="@+id/navigation_scan_qr"
            android:title="@string/nav_item_scan_qr" />
        <item
            android:id="@+id/navigation_notifications"
            android:title="@string/nav_item_notifications" />
    </group>

    <group
        android:id="@+id/admin_group"
        android:checkableBehavior="single"
        android:visible="false">

        <item
            android:id="@+id/navigation_admin_events"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Manage Events" />
        <item
            android:id="@+id/navigation_admin_profiles"
            android:icon="@drawable/ic_menu_people"
            android:title="Manage Profiles" />
        <item
            android:id="@+id/navigation_admin_images"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="Manage Images" />
        <item
            android:id="@+id/navigation_admin_notifications"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Review Notification Logs" />
    </group>

    <group android:id="@+id/group_common">
        <item
            android:id="@+id/navigation_profile"
            android:title="@string/nav_item_profile" />
        <item
            android:id="@+id/navigation_settings"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/navigation_logout"
            android:title="@string/nav_item_logout" />
    </group>

</menu>